# trategic-api

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  logging.yaml  pyproject.toml
.github/workflows/: format.yml  lint.yml  test.yml
src/: dummy.py
src/api/: __init__.py
src/api/routers/: __init__.py  api_status.py  router.py
src/config/: __init__.py  config.py  logging.py  mode.py
src/tasks/: __init__.py  dummy.py
tests/: conftest.py  test_dummy.py  test_setup.py
tests/test_api/: conftest.py  test_api_status.py
tests/test_tasks/: test_dummy.py
